# ld19-rs

./: Cargo.toml  README.md  serial_data_format.txt
src/: main.rs  window.rs
src/ld19/: decoder.rs  mod.rs
