[package]
name = "lidar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
futures = "0.3.30"
pixels = "0.15.0"
raqote = "0.8.4"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.11", features = ["codec"] }
winit = "0.30.9"
